# splat

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  cli.cc  directives.h  error.py.splat  exec.h  hello.py.splat  run_tests.sh  splat.cc  test.splat  testfile.cc
doc/: README.md
examples/: README.md  bind_gcc.sh  error.py.splat  gcc_example.c.splat  hello.py.splat  hello_2.py.splat  multiple_outputs.py.splat  stack.py.splat
lib/googletest-1.10.x/: CMakeLists.txt
src/: cli.cc  directives.h  exec.cc  exec.h  splat.cc  splat.h  strutil.cc  strutil.h  testfile.cc  testfile.h
test/: edge_cases.cc  summary.cc  test_summary.cc
